<resources>

    <!-- MAIN -->
    <string name="app_name">Софбус 24</string>
    <string name="btn_gps">Виртуални табла</string>
    <string name="gps_msg">Моля въведете номер на спирка:</string>
    <string name="btn_map">GPS времена - Google Maps</string>
    <string name="btn_schedule">Разписания</string>
    <string name="btn_favourite">Любими</string>
    <string name="btn_about">Информация</string>
    <string name="btn_exit">Изход</string>
    <string name="exit_msg">Сигурни ли сте, че искате да излезете от приложението?</string>
    <string name="ss_gps_map_msg_title">Грешка</string>
    <string name="ss_gps_map_msg_body">Моля включете поне едно от устройствата (GPS или WiFi), за да бъде засечено текущото ви местоположение.</string>

    <!-- Sofia Stations -->
    <string name="ss_name">Софийски градски транспорт</string>

    <!-- Vehicle Choice -->
    <string name="veh_ch_name">Разписание на колите</string>
    <string name="veh_ch_image">Изображение на превозното средство</string>
    <string name="veh_ch_direction_choice">Изберете направление</string>
    <string name="veh_ch_direction_choice_error">Информация</string>
    <string name="veh_ch_coordinates_error">Спирката не може да бъде визуализирана (не са намерени нейните координати в базата от данни).</string>
    <string name="veh_ch_direction_choice_error_msg">В момента не е налична информация за тази линия или имате проблем с вашата интернет връзка.</string>
    <string name="veh_ch_search_box">Търсене по номер</string>

    <!-- Station Choice -->
    <string name="st_ch_name">Направления</string>
    <string name="st_ch_menu_item">Вижте спирките върху картата</string>
    <string name="st_ch_menu_err_title">Грешка</string>
    <string name="st_ch_menu_err_msg">Спирките по тази линия не могат да бъдат визуализирани, тъй като не са намерени в базата от данни.</string>

    <!-- Station Info -->
    <string name="st_inf_name" formatted="false">Информация за %s</string>
    <string name="st_inf_time" formatted="false">Информация към %s</string>
    <string name="st_inf_satelite_image">Изглед на картата</string>
    <string name="st_inf_fav_ok">Спирката беше добавено успешно в любими.</string>
    <string name="st_inf_fav_err">Спирката вече е била добавена в любими.</string>
    <string name="st_inf_menu_position">Позиционирай</string>

    <!-- Favourites -->
    <string name="fav_info">Избрани спирки</string>
    <string name="fav_delete">Изтрий първата</string>
    <string name="fav_delete_all">Изтрий всички</string>
    <string name="fav_menu_rename">Преименувай</string>
    <string name="fav_menu_rename_title">Преименувай</string>
    <string name="fav_menu_rename_msg">Въведете новото име на спирката</string>
    <string name="fav_menu_delete">Изтрий</string>

    <!-- About -->
    <string name="about_label">Спирките в София (версия 1.0)</string>
    <string name="about_text">\ \tAndroid системата предоставя подробна информация, свързана с използването на градския транпорт 
        в София, като часове на пристигане в реално време, разписания на превозните средства, разположения на спирките 
        на територията на София, както и локализиране на най-близките спирки, в зависимост от текущото местоположение.
        \n\n<i>Данните се извличат от: http://m.sumc.bg</i> \n\n<b>Автор: Здравко Несторов</b></string>
    <string name="about_btn_label">OK</string>

    <!-- GPS -->
    <string name="gps_name">Виртуални табла</string>
    <string name="gps_err_dialog_title">Грешка</string>
    <string name="gps_fav_dialog_title">Любими</string>
    <string name="gps_err_dialog_msg">Възникна грешка при извличането на информация. Моля проверете вашата интернет връзка и опитайте отново.</string>
    <string name="gps_favourite_add">Добави в любими</string>
    <string name="gps_see_map">Виж на картата</string>
    <string name="gps_error_unknown">Грешка при трансфера на информация</string>
    <string name="gps_error_noInfo" formatted="false">Няма информация за спирка \"%s\"</string>
    <string name="gps_error_noBus" formatted="false">Спирката \"%s\" не съществува</string>
    <string name="gps_error_noBusEmpty">Спирката не съществува</string>
    <string name="gps_error_noCoordinates">Спирката не може да бъде визуализирана (не са намерени нейните координати в базата от данни).</string>

    <!-- SUMC GPS -->
    <string name="sumc_captcha">Тест за сигурност</string>
    <string name="sumc_captcha_msg">Моля въведете символите от изображението:</string>
    <string name="sumc_button_label">OK</string>

    <!-- MAP GPS -->
    <string name="map_gps_name">Виртуални табла - Google Maps</string>
    <string name="map_gps_menu_item_distance">Разстояние</string>
    <string name="map_gps_menu_item_focus">Позиционирай</string>
    <string name="map_gps_no_last_location">Моля изчакайте координати Ви да бъдат засечени.</string>
    <string name="map_gps_distance_OK" formatted="false">Разтоянието от текущата Ви позиция до избраната спирка е %s метра.</string>
    <string name="map_gps_distance_ERR">Моля изберете спирка.</string>

    <!-- HOME SCREEN BUTTONS -->
    <string name="hs_button1">Бутон 1</string>
    <string name="hs_button2">Бутон 2</string>
    <string name="hs_button3">Бутон 3</string>
    <string name="hs_button4">Бутон 4</string>
    <string name="hs_button5">Бутон 5</string>
    <string name="hs_button6">Бутон 6</string>

</resources>