<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:padding="30dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dip"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="24.5sp" />

        <Button
            android:id="@+id/btn_gps"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_gps" />

        <Button
            android:id="@+id/btn_map"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_map" />

        <Button
            android:id="@+id/btn_schedule"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_schedule" />

        <Button
            android:id="@+id/btn_favourite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_favourite" />

        <Button
            android:id="@+id/btn_about"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_about" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_exit" />
    </LinearLayout>

</LinearLayout>